# $Id$
2007-07-25 Benoit Grégoire  <bock@step.polymtl.ca>
	* VirtualHost.php:  Fix critical problem preventing new Virtual Hosts from being created.
	* StatisticGraph.php:  Fix a bad return by reference that prevented graphs from being displayed.  Thanks to Daniel Lemay for finding it.
	* Content.php:  Fix warning when selecting owners. Fix dangling metadata objects when deleting an object.
	* Statistics::getDateRangeUI():  Make days end a minute before midnight, not a minute before noon, DOH!
	* import_user_database.php:  Fix permission call systax error.  That does't mean the script works as a whole, it hasn't been maintained for years.
	* DependenciesList.php:  Make it extend GenericDataObject after all.  Fixes problem displaying it in the generic editor.
	
2007-07-22 Benoit Grégoire  <bock@step.polymtl.ca>
	* generic_object_admin.pgp:  Fix problems when creating new content objects.  Fix problems including the content type classes.
	* Avatar.php:  Make the resampling code support any format available to GD, not just jpeg.
	
2007-07-22 Benoit Grégoire  <bock@step.polymtl.ca>
	* More schema compatibility defensive coding.  Comment out all SET commands in the schema
	
2007-07-22 Benoit Grégoire  <bock@step.polymtl.ca>
	* install.php:  Fix #215

2007-07-21 Benoit Grégoire  <bock@step.polymtl.ca>
	* AnonymisedDataExport.php:  Work around the huge memory requirements this report used to have.
	* install.php:  Strip create procedural language from schema, that requires superuser anyway.
					Strip a few other things to hopefully allow it to work again with postgresql 7.4, but I need the full output of the commant "psql -f wifidog-postgres-schema.sql", run from the sql directory of a svn checkout, from someone still running 7.4, otherwise I can't do much. 
	* DependenciesList.php:  New class.  Allow seeing the dependency list once the server is installed.  A small step towards centralized dependency installation.

2007-07-20 Benoit Grégoire  <bock@step.polymtl.ca>